--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Login Page</h1>
-<form action="/login" method="POST">
+<form action="/loginProc" method="POST">
     <input type="text" name="username" placeholder="Username" /> <br/>
     <input type="password" name="password" placeholder="Password">
     <button>Login</button>
