--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -5,12 +5,13 @@
     <title>Login</title>
 </head>
 <body>
-    <h1>Login Page</h1>
+<h1>Login Page</h1>
 <form action="/loginProc" method="POST">
-    <input type="text" name="username" placeholder="Username" /> <br/>
-    <input type="password" name="password" placeholder="Password">
+    <input name="username" placeholder="Username" type="text"/> <br/>
+    <input name="password" placeholder="Password" type="password">
     <button>Login</button>
 </form>
+<a href="/oauth2/authorization/google">구글로그인</a>
 <a href="/joinForm">You are not one of us? please join us</a>
 </body>
 </html>
