--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -12,6 +12,7 @@
     <button>Login</button>
 </form>
 <a href="/oauth2/authorization/google">구글로그인</a>
+<a href="/oauth2/authorization/facebook">페북로그인</a>
 <a href="/joinForm">You are not one of us? please join us</a>
 </body>
 </html>
