--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -13,6 +13,7 @@
 </form>
 <a href="/oauth2/authorization/google">구글로그인</a>
 <a href="/oauth2/authorization/facebook">페북로그인</a>
+<a href="/oauth2/authorization/naver">네이버로그인</a>
 <a href="/joinForm">You are not one of us? please join us</a>
 </body>
 </html>
